DEV: Fix visualise button alignment, added extra card to visuals

--- a/modules/website/beaconApp/src/app/components/main/main.component.css
+++ b/modules/website/beaconApp/src/app/components/main/main.component.css
@@ -105,7 +105,7 @@ tr.example-element-row:not(.example-expanded-row):active {
   padding: 10;
   float: left;
   background-color: rgba(255, 255, 255);
-  border-radius: 10px 0px 0px 10px;
+  /* border-radius: 10px 0px 0px 10px; */
   overflow: hidden;
 }
 #histogram {
@@ -113,7 +113,7 @@ tr.example-element-row:not(.example-expanded-row):active {
   height: 400;
   float: left;
   background-color: rgba(255, 255, 255);
-  border-radius: 0px 10px 10px 0px;
+  /* border-radius: 0px 10px 10px 0px; */
 }
 #t03,
 p:first-letter {
